--- a/services/user/src/main/resources/application.yaml
+++ b/services/user/src/main/resources/application.yaml
@@ -25,6 +25,6 @@ eureka:
 
 auth:
   google:
-    client-id: ${GOOGLE_AUTH_CLIENT_ID}
-    client-secret: ${GOOGLE_AUTH_CLIENT_SECRET}
+    client-id: ${GOOGLE_AUTH_CLIENT_ID:212014364101-b72rca9c0shubom4t6547rdicc5gkf20.apps.googleusercontent.com}
+    client-secret: ${GOOGLE_AUTH_CLIENT_SECRET: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}
     redirect-uri: ${GOOGLE_AUTH_REDIRECT_URL:http://localhost:4000/auth/google/callback}
